[package]
name = "gen_id"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ref-cast = "^1.0"
nonmax = "0.5.0"
fxhash = "^0.2"
force_derive = { git = "https://github.com/frsrblch/force_derive" }
iter_context = { git = "https://github.com/frsrblch/iter_context" }

[[example]]
name = "macro_tests"