[package]
name = "gen_id"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ref-cast = "1.0"
nonmax = "0.5"
fxhash = "0.2"
crc32fast = "1.3"
iter_context = { git = "https://github.com/frsrblch/iter_context" }
rayon = { version = "1.7", optional = true }

[features]
rayon = ["dep:rayon"]
